--- a/app/src/main/res/layout/dialog_spell_grade.xml
+++ b/app/src/main/res/layout/dialog_spell_grade.xml
@@ -13,8 +13,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:background="@android:color/transparent">
+        android:background="@android:color/transparent"
+        android:gravity="center">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -37,7 +37,7 @@
                 android:orientation="horizontal"
                 app:layout_constraintGuide_percent="0.95" />
 
-            <TextView
+            <fr.enlight.anima.animamagiccards.views.CustomTextView
                 android:id="@+id/spell_grade_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -46,6 +46,7 @@
                 android:textColor="@{model.gradeColor}"
                 android:textSize="18sp"
                 android:textStyle="bold"
+                app:font="@string/regular_bold_font"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/top_guideline"
@@ -66,22 +67,24 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/spell_grade_title" />
 
-            <TextView
+            <fr.enlight.anima.animamagiccards.views.CustomTextView
                 android:id="@+id/spell_grade_intelligence"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="2dp"
                 android:text="@{model.gradeValues}"
+                android:gravity="center"
                 android:textColor="@android:color/black"
                 android:textSize="15sp"
                 android:textStyle="bold"
+                app:font="@string/regular_bold_font"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/separator"
                 tools:text="Int : 5 / 30 Zéon" />
 
-            <TextView
+            <fr.enlight.anima.animamagiccards.views.CustomTextView
                 android:id="@+id/spell_grade_effect"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -92,6 +95,7 @@
                 android:text="@{model.formattedEffect}"
                 android:textColor="@android:color/black"
                 android:textSize="15sp"
+                app:font="@string/regular_font"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/spell_grade_intelligence"
@@ -102,11 +106,12 @@
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/Common_Close"
                 android:onClick="@{() -> model.onDismissClicked()}"
-                app:layout_constraintTop_toBottomOf="@id/spell_grade_effect"
+                android:text="@string/Common_Close"
+                app:customFont="@{@string/regular_font}"
                 app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
-                app:layout_constraintRight_toRightOf="parent"/>
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/spell_grade_effect" />
 
         </android.support.constraint.ConstraintLayout>
     </LinearLayout>
