--- a/app/src/main/res/layout/view_spell_grade_item.xml
+++ b/app/src/main/res/layout/view_spell_grade_item.xml
@@ -17,7 +17,7 @@
         android:onClick="@{() -> model.expandGrade()}"
         android:orientation="vertical">
 
-        <fr.enlight.anima.animamagiccards.views.CustomTextView
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -25,7 +25,7 @@
             android:textSize="12sp"
             android:textColor="@{model.gradeColor}"
             android:text="@{model.gradeTitle}"
-            app:font="@string/regular_bold_font"
+            app:customFont="@{@string/regular_bold_font}"
             tools:text="Initial"
             tools:textColor="@color/initial_grade_color" />
 
@@ -36,7 +36,7 @@
             android:layout_marginRight="@dimen/spacing_large"
             android:background="@color/separator" />
 
-        <fr.enlight.anima.animamagiccards.views.CustomTextView
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -45,11 +45,11 @@
             android:gravity="center"
             android:textColor="@android:color/black"
             android:textSize="10sp"
-            app:font="@string/regular_bold_font"
+            app:customFont="@{@string/regular_bold_font}"
             android:text="@{model.gradeValues}"
             tools:text="Int : 5 / 30 Zéon \nMaintien : 10 Quot." />
 
-        <fr.enlight.anima.animamagiccards.views.CustomTextView
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -57,7 +57,7 @@
             android:gravity="center_horizontal"
             android:layout_marginTop="@dimen/spacing_small"
             android:maxLines="2"
-            app:font="@string/regular_font"
+            app:customFont="@{@string/regular_font}"
             android:paddingLeft="@dimen/spacing_large"
             android:paddingRight="@dimen/spacing_large"
             android:textColor="@android:color/black"
