--- a/app/src/main/res/layout/view_spellbook_item.xml
+++ b/app/src/main/res/layout/view_spellbook_item.xml
@@ -40,7 +40,7 @@
             android:src="@{model.getSpellbookIcon(context)}"
             tools:src="@drawable/card_icon_book_light" />
 
-        <fr.enlight.anima.animamagiccards.views.CustomTextView
+        <TextView
             android:id="@+id/spellbook_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -51,7 +51,7 @@
             app:layout_constraintRight_toRightOf="@id/spellbook_scroll_icon"
             app:layout_constraintVertical_bias="0.2"
             android:text="@{model.getTitle(context)}"
-            app:font="@string/regular_bold_font"
+            app:customFont="@{@string/regular_bold_font}"
             android:textSize="24sp"
             tools:text="Lumière" />
 
