--- a/app/src/main/res/layout/dialog_spell_grade.xml
+++ b/app/src/main/res/layout/dialog_spell_grade.xml
@@ -44,7 +44,7 @@
                 android:layout_gravity="center_horizontal"
                 android:text="@{model.gradeTitle}"
                 android:textColor="@{model.gradeColor}"
-                android:textSize="18sp"
+                android:textSize="@dimen/textSize_large"
                 android:textStyle="bold"
                 app:customFont="@{@string/regular_bold_font}"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -76,7 +76,7 @@
                 android:text="@{model.gradeValues}"
                 android:gravity="center"
                 android:textColor="@android:color/black"
-                android:textSize="15sp"
+                android:textSize="@dimen/textSize_medium"
                 android:textStyle="bold"
                 app:customFont="@{@string/regular_bold_font}"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -94,7 +94,7 @@
                 android:paddingRight="@dimen/spacing_large"
                 android:text="@{model.formattedEffect}"
                 android:textColor="@android:color/black"
-                android:textSize="15sp"
+                android:textSize="@dimen/textSize_medium"
                 app:customFont="@{@string/regular_font}"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -108,7 +108,7 @@
                 android:layout_height="wrap_content"
                 android:onClick="@{() -> model.onDismissClicked()}"
                 android:text="@string/Common_Close"
-                app:customFont="@{@string/regular_font}"
+                app:customFont="@{@string/regular_bold_font}"
                 app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/spell_grade_effect" />
