--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,4 +10,9 @@
         <item name="android:minWidth">0dp</item>
     </style>
 
+    <style name="FlatButton.NoPadding" >
+        <item name="android:minHeight">0dp</item>
+    </style>
+
+
 </resources>
