--- a/app/src/main/res/layout/view_spell_item.xml
+++ b/app/src/main/res/layout/view_spell_item.xml
@@ -88,8 +88,7 @@
             android:layout_marginStart="@dimen/spell_effect_margin"
             android:text="@{model.getActionType(context)}"
             android:textColor="@android:color/black"
-            android:textSize="@dimen/textSize_medium"
-            app:customFont="@{@string/regular_font}"
+            android:textSize="@dimen/textSize_regular"
             app:layout_constraintLeft_toLeftOf="@id/spell_card_background"
             app:layout_constraintTop_toTopOf="@id/scroll_guideline"
             tools:text="Action : Active" />
@@ -100,8 +99,7 @@
             android:layout_height="wrap_content"
             android:text="@{model.getType(context)}"
             android:textColor="@android:color/black"
-            android:textSize="@dimen/textSize_medium"
-            app:customFont="@{@string/regular_font}"
+            android:textSize="@dimen/textSize_regular"
             app:layout_constraintLeft_toLeftOf="@id/center_guideline"
             app:layout_constraintTop_toTopOf="@id/scroll_guideline"
             tools:text="Type : Attaque" />
@@ -168,7 +166,6 @@
             app:layout_constraintBottom_toTopOf="@id/spell_initial_grade"
             app:layout_constraintRight_toRightOf="@id/spell_card_background"
             app:layout_constraintLeft_toLeftOf="@id/spell_card_background"
-            app:customFont="@{@string/regular_bold_font}"
             android:paddingBottom="@dimen/spacing_small"
             android:onClick="@{() -> model.expandEffect()}"
             android:visibility="@{model.effectEllipsized ? View.VISIBLE : View.INVISIBLE}"
@@ -186,8 +183,7 @@
             android:onClick="@{() -> model.expandEffect()}"
             android:text="@{model.getEffect(context)}"
             android:textColor="@android:color/black"
-            android:textSize="@dimen/textSize_medium"
-            app:customFont="@{@string/regular_font}"
+            android:textSize="@dimen/textSize_regular"
             app:layout_constraintBottom_toTopOf="@id/spell_see_more_button"
             app:layout_constraintLeft_toLeftOf="@id/spell_card_background"
             app:layout_constraintRight_toRightOf="@id/spell_card_background"
