--- a/app/src/main/res/layout/view_spellbook_item.xml
+++ b/app/src/main/res/layout/view_spellbook_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -14,30 +14,52 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:paddingTop="@dimen/spacing_large"
         android:onClick="@{() -> model.onSpellbookClicked()}"
         android:orientation="vertical">
 
+        <android.support.constraint.Guideline
+            android:id="@+id/bottom_guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.8" />
+
+        <android.support.constraint.Guideline
+            android:id="@+id/left_guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.25" />
+
+        <android.support.constraint.Guideline
+            android:id="@+id/right_guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.75" />
+
         <ImageView
-            android:id="@+id/spellbook_scroll_icon"
-            android:layout_width="180dp"
-            android:layout_height="200dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:id="@+id/spell_card_background"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginLeft="@dimen/spacing_large"
+            android:layout_marginRight="@dimen/spacing_large"
+            android:src="@drawable/card_verso"
+            app:layout_constraintDimensionRatio="H,161:225"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:src="@drawable/card_spell_effect_scroll"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/spellbook_icon"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/spellbook_scroll_icon"
-            app:layout_constraintBottom_toBottomOf="@id/spellbook_scroll_icon"
-            app:layout_constraintLeft_toLeftOf="@id/spellbook_scroll_icon"
-            app:layout_constraintRight_toRightOf="@id/spellbook_scroll_icon"
-            app:layout_constraintVertical_bias="0.8"
-            android:layout_marginTop="@dimen/spacing_base"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:src="@{model.getSpellbookIcon(context)}"
+            app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
+            app:layout_constraintDimensionRatio="H,1:1"
+            app:layout_constraintLeft_toLeftOf="@id/left_guideline"
+            app:layout_constraintRight_toRightOf="@id/right_guideline"
             tools:src="@drawable/card_icon_book_light" />
 
         <TextView
@@ -45,14 +67,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            app:layout_constraintTop_toTopOf="@id/spellbook_scroll_icon"
-            app:layout_constraintBottom_toBottomOf="@id/spellbook_scroll_icon"
-            app:layout_constraintLeft_toLeftOf="@id/spellbook_scroll_icon"
-            app:layout_constraintRight_toRightOf="@id/spellbook_scroll_icon"
-            app:layout_constraintVertical_bias="0.2"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/spellbook_icon"
+            app:layout_constraintLeft_toLeftOf="@id/spell_card_background"
+            app:layout_constraintRight_toRightOf="@id/spell_card_background"
+            app:layout_constraintVertical_bias="0.8"
             android:text="@{model.getTitle(context)}"
-            app:customFont="@{@string/regular_bold_font}"
-            android:textSize="24sp"
+            app:customFont="@{@string/spellbook_title_font}"
+            android:textSize="28sp"
             tools:text="Lumière" />
 
     </android.support.constraint.ConstraintLayout>
