--- a/app/src/main/res/values/static_strings.xml
+++ b/app/src/main/res/values/static_strings.xml
@@ -5,5 +5,6 @@
     <string name="regular_font" translatable="false">garrison_sans</string>
     <string name="regular_bold_font" translatable="false">garrison_sans_bold</string>
     <string name="spell_title_font" translatable="false">anima_2</string>
+    <string name="spellbook_title_font" translatable="false">anima_2</string>
 
 </resources>
