Début d'implémentation des listes de sorts, déplacement de certaines resources graphiques

--- a/app/src/main/res/layout/view_spellbook_loading.xml
+++ b/app/src/main/res/layout/view_spellbook_loading.xml
@@ -47,7 +47,7 @@
             app:layout_constraintLeft_toLeftOf="@id/spell_card_background"
             app:layout_constraintRight_toRightOf="@id/spell_card_background"
             app:customFont="@{@string/technical_font}"
-            android:text="@string/Loading_Message"
+            android:text="@string/Common_Loading_Message"
             android:layout_marginBottom="@dimen/spacing_large"
             android:textSize="40sp" />
 
