--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="light_gray">#f5f5f5</color>
     <color name="mid_gray">#c0c0c0</color>
     <color name="dark_gray">#616161</color>
+    <color name="background_gray">#c0c0c0c0</color>
 
 </resources>
