--- a/app/src/main/res/layout/activity_spell.xml
+++ b/app/src/main/res/layout/activity_spell.xml
@@ -5,5 +5,5 @@
     android:paddingTop="@dimen/status_bar_height"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/ic_background"
+    android:background="@drawable/spells_background"
     tools:context=".ui.spellbooks.SpellActivity"/>
