--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <dimen name="spacing_small">4dp</dimen>
     <dimen name="spacing_base">8dp</dimen>
     <dimen name="spacing_large">16dp</dimen>
@@ -13,4 +12,7 @@
     <dimen name="spell_effect_margin">36dp</dimen>
 
     <dimen name="status_bar_height">24dp</dimen>
+
+    <dimen name="witchspells_icon_main_size">30dp</dimen>
+    <dimen name="witchspells_icon_secondary_size">20dp</dimen>
 </resources>
