--- a/app/src/main/res/layout/view_witchspells_item.xml
+++ b/app/src/main/res/layout/view_witchspells_item.xml
@@ -46,7 +46,7 @@
             android:text="@{model.witchName}"
             tools:text="Sorts de Célia"/>
 
-        <ListLinearLayout
+        <LinearLayout
             android:id="@+id/witchspells_container_layout"
             android:layout_width="0dp"
             android:layout_height="0dp"
