--- a/app/src/main/res/layout/view_witchspells_path_item.xml
+++ b/app/src/main/res/layout/view_witchspells_path_item.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/witchspells_spellbook_scroll_banner"
         android:orientation="horizontal"
+        app:layout_marginTop="@{model.mainPath ? @dimen/spacing_large : 0.0f}"
         tools:layout_marginTop="@dimen/header_spacing">
 
         <TextView
@@ -24,7 +25,7 @@
             android:layout_marginLeft="@dimen/spacing_large"
             android:layout_marginStart="@dimen/spacing_large"
             android:layout_weight="1"
-            android:text="@{model.bookTitleAndLevel}"
+            android:text="@{model.getBookTitleAndLevel(context)}"
             android:textColor="@android:color/black"
             android:textSize="@{model.mainPath ? @dimen/textSize_large : @dimen/textSize_medium}"
             android:textStyle="bold"
@@ -32,10 +33,10 @@
             tools:text="Chaos Niv. 30" />
 
         <ImageView
-            android:layout_width="@{model.mainPath ? @dimen/witchspells_icon_main_size : @dimen/witchspells_icon_secondary_size}"
-            android:layout_height="@{model.mainPath ? @dimen/witchspells_icon_main_size : @dimen/witchspells_icon_secondary_size}"
+            android:layout_width="@dimen/witchspells_icon_main_size"
+            android:layout_height="@dimen/witchspells_icon_main_size"
             android:layout_margin="@dimen/spacing_small"
-            android:src="@{model.bookDrawable}"
+            android:src="@{model.getBookDrawable(context)}"
             tools:src="@drawable/card_icon_book_chaos" />
 
     </LinearLayout>
