Ajout du bouton d'ajout de liste de sorts

--- a/app/src/main/res/layout/fragment_witchspells_list.xml
+++ b/app/src/main/res/layout/fragment_witchspells_list.xml
@@ -37,7 +37,8 @@
             android:paddingStart="@dimen/spacing_big"
             android:paddingTop="@dimen/spacing_base"
             android:text="@string/Witch_Creation_Title"
-            android:textSize="30sp"
+            android:gravity="center_vertical"
+            android:textSize="40sp"
             app:customFont="@{@string/spell_title_font}"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="@id/right_guideline"
