--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,4 +15,5 @@
 
     <dimen name="witchspells_icon_main_size">30dp</dimen>
     <dimen name="witchspells_icon_secondary_size">20dp</dimen>
+    <dimen name="witchbook_margin">60dp</dimen>
 </resources>
