--- a/app/src/main/res/layout/fragment_witchspells_creation.xml
+++ b/app/src/main/res/layout/fragment_witchspells_creation.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="model"
-            type="fr.enlight.anima.animamagiccards.ui.witchspells.viewmodels.write.WitchspellsCreationViewModel" />
+            type="fr.enlight.anima.animamagiccards.ui.witchspells.viewmodels.WitchspellsCreationViewModel" />
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -34,23 +34,34 @@
             style="@style/FlatButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@id/witchspells_validation_button"
+            app:layout_constraintBottom_toBottomOf="@id/witchspells_background"
             app:layout_constraintLeft_toLeftOf="@id/witchspells_background"
             app:layout_constraintRight_toRightOf="@id/witchspells_background"
+            android:layout_marginBottom="@dimen/spacing_base"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
             android:text="@string/Witchspells_Validate_Creation"/>
 
         <ScrollView
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@id/witchspells_validation_button"
             app:layout_constraintLeft_toLeftOf="@id/witchspells_background"
             app:layout_constraintRight_toRightOf="@id/witchspells_background"
-            app:layout_constraintTop_toTopOf="@id/witchspells_background">
+            app:layout_constraintTop_toTopOf="@id/witchspells_background"
+            app:layout_constraintBottom_toTopOf="@id/witchspells_validation_button">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:textSize="24sp"
+                    android:textColor="@android:color/white"
+                    android:text="@string/Witchspells_Name_Label"/>
 
                 <EditText
                     android:id="@+id/witchspells_name_edittext"
@@ -60,7 +71,6 @@
                     android:layout_marginRight="@dimen/spacing_base"
                     android:textColor="@android:color/white"
                     android:gravity="center"
-                    android:hint="@string/Witchspells_Name_Label"
                     android:inputType="text"
                     app:customFont="@{@string/spell_title_font}" />
 
