--- a/app/src/main/res/layout/view_witchspells_path_item_edit.xml
+++ b/app/src/main/res/layout/view_witchspells_path_item_edit.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="model"
-            type="fr.enlight.anima.animamagiccards.ui.witchspells.viewmodels.read.WitchspellsPathItemViewModel" />
+            type="fr.enlight.anima.animamagiccards.ui.witchspells.viewmodels.WitchspellsPathItemViewModel" />
     </data>
 
     <LinearLayout
